fixed bug with wrong colors showing for bots

--- a/src/styles/components/Modal.css
+++ b/src/styles/components/Modal.css
@@ -9,9 +9,9 @@
     background-color: rgb(0, 0, 0, .4);
 }
 .modal-content {
-    width: 90%;
+    width: 100%;
+    max-width: 1000px;
     margin: 6em auto;
-    /* background-image: url(/src/assets/images/lines.svg); */
     background-size: 100%;
     background-color: rgb(84, 249, 253);
     font-family: var(--pixel-font);
